# sglang-rdma-inc

./: 1.txt  start.sh  test_sglang.py  test_tp.py
rdma_incc/: CMakeLists.txt  LICENSE  README.md
rdma_incc/common/: CMakeLists.txt  allreduce.proto  choose_config.sh  common.cmake  topo_hierarchical.json  topo_p.json  topo_p2.json  topo_t.json
rdma_incc/icrc/: disable-icrc.sh  enable-icrc.sh  query-icrc.sh
rdma_incc/nccl-tests/: hostfile  local_run_inc.sh  local_run_no_inc.sh  local_run_no_inc_mtu256.sh  local_run_no_inc_mtu4096.sh  local_run_raw.sh  make.sh  run.sh  run_all_result.txt  run_all_tests.sh  sync.sh  test_result.md  test_result.xlsx
rdma_incc/nccl-tests/src/: Makefile  all_reduce.cu  allreduce.proto  inc_all_reduce.cu  inc_grpc.cc  net_utils.hpp  yyt_error.h
rdma_incc/server/: CMakeLists.txt  error.h  inc.hpp  main.cpp  nccl.cpp  net_utils.hpp  rdma.cpp  rdma.h  rdma_group.cpp  rdma_group.h  set_switch_mac.py  test_rdma_group.cpp  utils.hpp
rdma_incc/server/old/: allreduce_file.cpp  broadcast.cpp  gen_allreduce_data.py  rdma_cp.cpp  test_grpc.cpp  test_net_utils.cpp  test_socket.cpp
rdma_incc/switch/: CMakeLists.txt  aggregator.p4  allreduce_egress.p4  allreduce_grpc.py  allreduce_ingress.p4  allreduce_init.py  allreduce_sendout.p4  broadcast_egress.p4  broadcast_grpc.py  broadcast_ingress.p4  broadcast_init.py  broadcast_sendout.p4  byteswap.p4  custom_header.p4  kill.sh  rdma_allreduce.p4  rdma_broadcast.p4  rdma_reduce.p4  reduce_egress.p4  reduce_grpc.py  reduce_ingress.p4  reduce_sendout.p4  run.sh  std_header.p4  test_grpc.py  test_grpc_client.py  test_grpc_server.py  two_step_run.sh  utils.sh
rdma_incc/switch/old/: dp_broadcast_custom_header.p4  dp_broadcast_egress.p4  dp_broadcast_ingress.p4
rdma_incc/test/: test.py
rdma_incc/unused/: allreduce_benchmark_old.cpp  bc.md  bugs.md  selfloop.p4  selfloop_bfrt.py  ucli_port_init(unused)
